@@ -3,7 +3,7 @@ Encoding=UTF-8
 _Name=System Log
 _Comment=View the system log file
 Exec=gnome-system-log
-Icon=logviewer.png
+Icon=logviewer
 Terminal=false
 Type=Application
 StartupNotify=true
