@@ -1,3 +1,8 @@
+2003-12-13  Michael Terry  <mterry@fastmail.fm>
+
+       * Makefile.am, about.c, gnome-system-log.desktop.in, logview.c: Use
+       gnome-icon-theme instead of built-in icons.  Fixes #129283.
+
 2003-12-30  Christian Neumair  <chris@gnome-de.org>
 
 	* info.c: (RepaintLogInfo): Use ngettext for plurals (#106700).
